<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MPL_Base.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MPL_Base.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appwidget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/is_prime_question"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/widget_btn_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/true_btn"
                android:src="@drawable/icon_true" />

            <ImageButton
                android:id="@+id/widget_btn_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/false_btn"
                android:src="@drawable/icon_false" />
        </LinearLayout>

        <Button
            android:id="@+id/appwidget_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/refresh_btn" />
    </LinearLayout>
</RelativeLayout>